fixed missing border

--- a/app/assets/stylesheets/components/_site-components.scss
+++ b/app/assets/stylesheets/components/_site-components.scss
@@ -39,6 +39,10 @@ body {
   border: 3px solid $hero-color;
 }
 
+.red-border-home {
+  border: 3px solid $hero-color;
+}
+
 .white-bg {
   background-color: white;
 }
